--- a/BaiTapMayTinh.ipynb
+++ b/BaiTapMayTinh.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "    text_input.set(\"\") \n",
     "def btnEquals():\n",
     "    global operator\n",
-    "    result=str(eval(operator))\n",
+    "    result=str(eval(operator)) # hàm eval có thể tính được chuỗi biểu thức.\n",
     "    text_input.set(result) \n",
     "win = Tk()\n",
     "win.geometry(\"500x500\")\n",
